# python-vet

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
assets/: Architecture.drawio
src/pyvet/: __init__.py  __main__.py  cli.py
src/pyvet/commands/: add_exemption.py  aggregate.py  certify.py  check.py  diff.py  explain_audit.py  fmt.py  gc.py  imports.py  init.py  inspect_cmd.py  prune.py  record_violation.py  regenerate.py  renew.py  suggest.py  trust.py
src/pyvet/core/: config.py  criteria.py  imports.py  lockfile.py  resolver.py
src/pyvet/pypi/: client.py
src/pyvet/utils/: git.py  toml.py  ui.py
supply-chain/: audits.toml  config.toml
